# smtp-test-server

./: Cargo.toml  LICENSE  build.rs  config.example.toml
page/: .gitignore  .postcssrc  package.json  tsconfig.json
page/src/: data.ts  index.html  main.tsx
page/src/App/: index.css  index.tsx
page/src/MailList/: index.css  index.tsx
page/src/MailView/: index.css  index.tsx
page/src/MailView/components/: MessageBody.tsx  MultipartAlternative.tsx  MultipartBody.tsx  MultipartMixed.tsx  MultipartPart.tsx  SimpleBody.tsx
page/src/components/: Address.tsx  DateTime.tsx  Group.tsx  GroupOrMailbox.tsx  Mailbox.css  Mailbox.tsx  MailboxList.tsx  Tabs.css  Tabs.tsx
src/: config.rs  macros.rs  main.rs  state.rs  syntax.rs  util.rs
src/mail/: mod.rs  syntax.rs
src/mime/: encoding.rs  mod.rs  multipart.rs  syntax.rs
src/smtp/: mod.rs  proto.rs  server.rs  syntax.rs
src/web/: mod.rs
