[package]
name = "smtp-test-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.4", features = ["ws"] }
env_logger = { version = "0.9", default-features = false, features = ["atty", "termcolor"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1.16", features = ["io-util", "macros", "net", "rt-multi-thread"] }
